chenfan-jenkins/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: jenkins-ci
  name: jenkins-ci
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: admin
    nodePort: 31595
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: jnlp
    nodePort: 31266
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins-ci
  sessionAffinity: None
  type: NodePort
